WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175993
Land stubs for File and Directory Entries API interfaces
https://bugs.webkit.org/show_bug.cgi?id=175993
Summary
Land stubs for File and Directory Entries API interfaces
Chris Dumez
Reported
2017-08-25 13:19:01 PDT
Land stubs for File and Directory Entries API interfaces: -
https://wicg.github.io/entries-api/#idl-index
Attachments
Patch
(85.95 KB, patch)
2017-08-25 13:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(85.88 KB, patch)
2017-08-25 14:58 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-08-25 13:19:35 PDT
<
rdar://problem/34087477
>
Chris Dumez
Comment 2
2017-08-25 13:51:56 PDT
Created
attachment 319097
[details]
Patch
Build Bot
Comment 3
2017-08-25 13:53:06 PDT
Attachment 319097
[details]
did not pass style-queue: ERROR: Source/WebCore/CMakeLists.txt:156: Alphabetical sorting problem. "Modules/entriesapi" should be before "Modules/encryptedmedia/legacy". [list/order] [5] Total errors found: 1 in 28 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryosuke Niwa
Comment 4
2017-08-25 14:55:05 PDT
Comment on
attachment 319097
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=319097&action=review
> Source/WebCore/Modules/entriesapi/FileSystemDirectoryEntry.idl:34 > + optional FileSystemFlags options, > + optional FileSystemEntryCallback? successCallback, > + optional ErrorCallback? errorCallback);
Can we use WebKit style indentation (4 spaces to the right of avoid getFile) instead?
> Source/WebCore/Modules/entriesapi/FileSystemDirectoryEntry.idl:39 > + optional FileSystemFlags options, > + optional FileSystemEntryCallback? successCallback, > + optional ErrorCallback? errorCallback);
Ditto.
Chris Dumez
Comment 5
2017-08-25 14:58:40 PDT
Created
attachment 319103
[details]
Patch
Build Bot
Comment 6
2017-08-25 15:00:25 PDT
Attachment 319103
[details]
did not pass style-queue: ERROR: Source/WebCore/CMakeLists.txt:156: Alphabetical sorting problem. "Modules/entriesapi" should be before "Modules/encryptedmedia/legacy". [list/order] [5] Total errors found: 1 in 28 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 7
2017-08-25 15:41:08 PDT
Comment on
attachment 319103
[details]
Patch Clearing flags on attachment: 319103 Committed
r221209
: <
http://trac.webkit.org/changeset/221209
>
WebKit Commit Bot
Comment 8
2017-08-25 15:41:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug