Land stubs for File and Directory Entries API interfaces https://bugs.webkit.org/show_bug.cgi?id=175993 <rdar://problem/34087477>

Reviewed by Ryosuke Niwa.

Source/JavaScriptCore:

Add CommonIdentifiers needed for [EnabledAtRuntime].

* runtime/CommonIdentifiers.h:

Source/WebCore:

Land stubs for File and Directory Entries API interfaces:
- https://wicg.github.io/entries-api/#idl-index

Those will be needed to support drag and drop.

Test: http/wpt/entries-api/interfaces.html

* CMakeLists.txt:
* DerivedSources.cpp:
* DerivedSources.make:
* Modules/entriesapi/DOMFileSystem.cpp: Added.
(WebCore::DOMFileSystem::DOMFileSystem):
(WebCore::DOMFileSystem::~DOMFileSystem):
* Modules/entriesapi/DOMFileSystem.h: Added.
(WebCore::DOMFileSystem::create):
(WebCore::DOMFileSystem::name const):
(WebCore::DOMFileSystem::root const):
* Modules/entriesapi/DOMFileSystem.idl: Added.
* Modules/entriesapi/ErrorCallback.h: Added.
* Modules/entriesapi/ErrorCallback.idl: Added.
* Modules/entriesapi/FileCallback.h: Added.
* Modules/entriesapi/FileCallback.idl: Added.
* Modules/entriesapi/FileSystemDirectoryEntry.cpp: Added.
(WebCore::FileSystemDirectoryEntry::FileSystemDirectoryEntry):
(WebCore::FileSystemDirectoryEntry::getFile):
(WebCore::FileSystemDirectoryEntry::getDirectory):
* Modules/entriesapi/FileSystemDirectoryEntry.h: Added.
* Modules/entriesapi/FileSystemDirectoryEntry.idl: Added.
* Modules/entriesapi/FileSystemEntry.cpp: Added.
(WebCore::FileSystemEntry::FileSystemEntry):
* Modules/entriesapi/FileSystemEntry.h: Added.
(WebCore::FileSystemEntry::~FileSystemEntry):
(WebCore::FileSystemEntry::isFile const):
(WebCore::FileSystemEntry::isDirectory const):
(WebCore::FileSystemEntry::name const):
(WebCore::FileSystemEntry::fullPath const):
(WebCore::FileSystemEntry::filesystem const):
* Modules/entriesapi/FileSystemEntry.idl: Added.
* Modules/entriesapi/FileSystemEntryCallback.h: Added.
* Modules/entriesapi/FileSystemEntryCallback.idl: Added.
* Modules/entriesapi/FileSystemFileEntry.cpp: Added.
(WebCore::FileSystemFileEntry::FileSystemFileEntry):
(WebCore::FileSystemFileEntry::file):
* Modules/entriesapi/FileSystemFileEntry.h: Added.
* Modules/entriesapi/FileSystemFileEntry.idl: Added.
* WebCore.xcodeproj/project.pbxproj:

LayoutTests:

Add layout test coverage.

* http/wpt/entries-api/interfaces-expected.txt: Added.
* http/wpt/entries-api/interfaces.html: Added.


Canonical link: https://commits.webkit.org/192656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221209 268f45cc-cd09-0410-ab3c-d52691b4dbfc